--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -2,7 +2,9 @@
 /*import heroImage from '../assets/heroImage.png';*/
 
 main {
-  flex: 1;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 .heroTitle {
   font-family: 'Roboto', sans-serif;
