--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -1,21 +1,40 @@
 .homepage {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   font-family: 'Roboto', sans-serif;
   font-weight: 700;
   text-align: center;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 .row{
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 .image-holder{
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 .big-image {
   height: 560px;
@@ -23,15 +42,23 @@
   margin: 10px;
 }
 .small-image {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   height: 270px;
   width: 350px;
   margin: 0px 30px 30px 30px;
 }
 .big-title-holder {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   height: 560px;
   width:500px;
   color: rgba(0, 0, 0, 0.0);
@@ -39,10 +66,16 @@
 .big-title-holder:hover {
   background-color: rgba(0, 0, 0, 0.7);
   color: #fff;
+  -webkit-transition: background-color 0.5s, color 0.5s;
+  transition: background-color 0.5s, color 0.5s;
 }
 .small-title-holder {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   height: 270px;
   width: 350px;
   color: rgba(0, 0, 0, 0.0);
@@ -50,13 +83,19 @@
 .small-title-holder:hover {
   background-color: rgba(0, 0, 0, 0.7);
   color: #fff;
+  -webkit-transition: background-color 0.5s, color 0.5s;
+  transition: background-color 0.5s, color 0.5s;
 }
 .big-title {
-  align-self: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
   font-size: 5em;
 }
 .small-title {
-  align-self: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
   font-size: 3.3em;
 }
 .dogs {
@@ -104,7 +143,7 @@
     margin-left: 10px;
   }
 }
-  
+
 @media (max-width: 800px) {
   .small-title-holder {
     background-color: rgba(0, 0, 0, 0.6);
