--- a/src/styles/cards.css
+++ b/src/styles/cards.css
@@ -1,14 +1,23 @@
 .three-cards {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   font-family: 'Roboto', sans-serif;
-  justify-content: space-around;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 .card {
   background-color: #FFF7E5;
   border-radius: 10px 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   height: 25em;
   margin: 1em .5em;
   width: 20em;
@@ -21,6 +30,8 @@
   margin: .3em 0;
 }
 .card-desription {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   font-size:1em;
   padding: 0 .5em;
@@ -28,7 +39,8 @@
 }
 .card-link {
   color: #D32F2F;
-  align-self: flex-end;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
   padding: 1em 1em 0 0;
   text-decoration: none;
 }
