--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -3,12 +3,20 @@ footer {
   color: #FFF;
 }
 .container-footer {
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   font-family: 'Roboto', sans-serif;
 }
 footer ul {
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   list-style: none;
   padding: 1em;
@@ -17,7 +25,9 @@ footer li {
   margin: 0 1em;
 }
 .name-location {
-  flex: 3;
+  -webkit-box-flex: 3;
+      -ms-flex: 3;
+          flex: 3;
   text-align: right;
 }
 footer p {
@@ -26,7 +36,10 @@ footer p {
 
 @media (max-width: 600px) {
   .container-footer {
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
   .name-location {
     text-align: center;
