--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -47,8 +47,13 @@ table {
 	border-spacing: 0;
 }
 .body {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   margin: 0;
   min-height: 100vh;
 }
