--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -46,7 +46,7 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-.body {
+.scroll {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -56,4 +56,9 @@ table {
           flex-direction: column;
   margin: 0;
   min-height: 100vh;
+}
+.no-scroll {
+	margin: 0;
+	height: 100vh;
+	overflow-y: hidden;
 }
